--- a/MDK-ARM/Objects/Template.build_log.htm
+++ b/MDK-ARM/Objects/Template.build_log.htm
@@ -26,35 +26,10 @@ Project File Date:  01/29/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'Template'
-assembling startup_stm32g030xx.s...
-compiling system_stm32g0xx.c...
-compiling stm32g0xx_it.c...
+Build target 'Template'
 compiling main.c...
-compiling stm32g0xx_hal_msp.c...
-compiling stm32g0xx_hal_cortex.c...
-compiling stm32g0xx_hal.c...
-compiling stm32g0xx_hal_pwr.c...
-compiling stm32g0xx_hal_pwr_ex.c...
-compiling stm32g0xx_hal_rcc_ex.c...
-compiling stm32g0xx_hal_gpio.c...
-compiling stm32g0xx_hal_usart_ex.c...
-compiling stm32g0xx_hal_rcc.c...
-compiling stm32g0xx_hal_uart_ex.c...
-compiling stm32g0xx_hal_usart.c...
-compiling stm32g0xx_hal_dma.c...
-compiling stm32g0xx_hal_uart.c...
-compiling sys.c...
-compiling delay.c...
-compiling bt.c...
-compiling led.c...
-compiling bt_dp.c...
-compiling usart.c...
-compiling iic.c...
-compiling AircraftWar.c...
-compiling OLED.c...
 linking...
-Program Size: Code=22428 RO-data=2172 RW-data=72 ZI-data=3464  
+Program Size: Code=20992 RO-data=1232 RW-data=72 ZI-data=3464  
 FromELF: creating hex file...
 ".\Objects\Template.axf" - 0 Error(s), 0 Warning(s).
 
