--- a/MDK-ARM/Objects/Template.build_log.htm
+++ b/MDK-ARM/Objects/Template.build_log.htm
@@ -26,10 +26,36 @@ Project File Date:  01/29/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'Template'
+Rebuild target 'Template'
+assembling startup_stm32g030xx.s...
+compiling stm32g0xx_hal_msp.c...
 compiling main.c...
+compiling stm32g0xx_it.c...
+compiling system_stm32g0xx.c...
+compiling stm32g0xx_hal.c...
+compiling stm32g0xx_hal_cortex.c...
+compiling stm32g0xx_hal_pwr.c...
+compiling stm32g0xx_hal_pwr_ex.c...
+compiling stm32g0xx_hal_usart_ex.c...
+compiling stm32g0xx_hal_gpio.c...
+compiling stm32g0xx_hal_rcc_ex.c...
+compiling stm32g0xx_hal_uart_ex.c...
+compiling stm32g0xx_hal_rcc.c...
+compiling stm32g0xx_hal_usart.c...
+compiling stm32g0xx_hal_dma.c...
+compiling sys.c...
+compiling stm32g0xx_hal_uart.c...
+compiling delay.c...
+compiling led.c...
+compiling usart.c...
+compiling bt.c...
+compiling bt_dp.c...
+compiling iic.c...
+compiling AircraftWar.c...
+compiling AW_Background.c...
+compiling OLED.c...
 linking...
-Program Size: Code=20992 RO-data=1232 RW-data=72 ZI-data=3464  
+Program Size: Code=21536 RO-data=2256 RW-data=72 ZI-data=3472  
 FromELF: creating hex file...
 ".\Objects\Template.axf" - 0 Error(s), 0 Warning(s).
 
