--- a/MDK-ARM/Objects/AW.build_log.htm
+++ b/MDK-ARM/Objects/AW.build_log.htm
@@ -22,42 +22,42 @@ Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
 D:\code\EmbeddedProject\M0Plus-Proect\AircraftWar-OLED-BT-DataPacket\MDK-ARM\AircraftWar-OLED-BT-DataPacket.uvprojx
-Project File Date:  01/29/2023
+Project File Date:  01/31/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Template'
 assembling startup_stm32g030xx.s...
-compiling stm32g0xx_hal_msp.c...
-compiling main.c...
 compiling stm32g0xx_it.c...
 compiling system_stm32g0xx.c...
+compiling stm32g0xx_hal_msp.c...
+compiling main.c...
 compiling stm32g0xx_hal.c...
-compiling stm32g0xx_hal_cortex.c...
 compiling stm32g0xx_hal_pwr.c...
 compiling stm32g0xx_hal_pwr_ex.c...
+compiling stm32g0xx_hal_cortex.c...
+compiling stm32g0xx_hal_rcc_ex.c...
 compiling stm32g0xx_hal_usart_ex.c...
 compiling stm32g0xx_hal_gpio.c...
-compiling stm32g0xx_hal_rcc_ex.c...
-compiling stm32g0xx_hal_uart_ex.c...
 compiling stm32g0xx_hal_rcc.c...
-compiling stm32g0xx_hal_usart.c...
+compiling stm32g0xx_hal_uart_ex.c...
 compiling stm32g0xx_hal_dma.c...
+compiling stm32g0xx_hal_usart.c...
 compiling sys.c...
 compiling stm32g0xx_hal_uart.c...
 compiling delay.c...
 compiling led.c...
-compiling usart.c...
 compiling bt.c...
+compiling usart.c...
 compiling bt_dp.c...
 compiling iic.c...
-compiling AircraftWar.c...
 compiling AW_Background.c...
+compiling AircraftWar.c...
 compiling OLED.c...
 linking...
 Program Size: Code=21536 RO-data=2256 RW-data=72 ZI-data=3472  
 FromELF: creating hex file...
-".\Objects\Template.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\AW.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -70,7 +70,7 @@ Package Vendor: Keil
   D:/Users/YEWAN/AppData/Local/Arm/Packs/Keil/STM32G0xx_DFP/1.4.0/Drivers/CMSIS/Device/ST/STM32G0xx/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
