--- a/MDK-ARM/Objects/AW.htm
+++ b/MDK-ARM/Objects/AW.htm
@@ -1,9 +1,9 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html><head>
-<title>Static Call Graph - [.\Objects\Template.axf]</title></head>
+<title>Static Call Graph - [.\Objects\AW.axf]</title></head>
 <body><HR>
-<H1>Static Call Graph for image .\Objects\Template.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Mon Jan 30 01:35:45 2023
+<H1>Static Call Graph for image .\Objects\AW.axf</H1><HR>
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Tue Jan 31 02:39:09 2023
 <BR><P>
 <H3>Maximum Stack Usage =        368 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
