--- a/MDK-ARM/Objects/AW.build_log.htm
+++ b/MDK-ARM/Objects/AW.build_log.htm
@@ -30,8 +30,8 @@ Rebuild target 'Template'
 assembling startup_stm32g030xx.s...
 compiling stm32g0xx_it.c...
 compiling stm32g0xx_hal_msp.c...
-compiling main.c...
 compiling system_stm32g0xx.c...
+compiling main.c...
 compiling stm32g0xx_hal_cortex.c...
 compiling stm32g0xx_hal.c...
 compiling stm32g0xx_hal_pwr.c...
@@ -39,19 +39,20 @@ compiling stm32g0xx_hal_pwr_ex.c...
 compiling stm32g0xx_hal_rcc_ex.c...
 compiling stm32g0xx_hal_usart_ex.c...
 compiling stm32g0xx_hal_gpio.c...
-compiling stm32g0xx_hal_uart_ex.c...
 compiling stm32g0xx_hal_rcc.c...
+compiling stm32g0xx_hal_uart_ex.c...
 compiling stm32g0xx_hal_usart.c...
-compiling stm32g0xx_hal_uart.c...
 compiling stm32g0xx_hal_dma.c...
 compiling sys.c...
-compiling delay.c...
+compiling stm32g0xx_hal_uart.c...
 compiling led.c...
-compiling usart.c...
+compiling delay.c...
 compiling bt.c...
+compiling usart.c...
 compiling bt_dp.c...
 compiling iic.c...
 compiling AW_Player.c...
+compiling AW_Bullet.c...
 compiling AircraftWar.c...
 compiling OLED.c...
 linking...
