--- a/MDK-ARM/Objects/AW.build_log.htm
+++ b/MDK-ARM/Objects/AW.build_log.htm
@@ -28,42 +28,38 @@ Project File Date:  02/01/2023
 *** Using Compiler 'V6.19', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Template'
 assembling startup_stm32g030xx.s...
-compiling stm32g0xx_it.c...
-compiling stm32g0xx_hal_msp.c...
 compiling system_stm32g0xx.c...
-compiling stm32g0xx_hal_rcc_ex.c...
-compiling stm32g0xx_hal_cortex.c...
+compiling stm32g0xx_hal_msp.c...
+compiling stm32g0xx_it.c...
 compiling stm32g0xx_hal.c...
+compiling stm32g0xx_hal_rcc_ex.c...
 compiling stm32g0xx_hal_pwr_ex.c...
+compiling stm32g0xx_hal_cortex.c...
 compiling stm32g0xx_hal_pwr.c...
-compiling main.c...
 compiling stm32g0xx_hal_usart_ex.c...
+compiling main.c...
 compiling stm32g0xx_hal_gpio.c...
 compiling stm32g0xx_hal_rcc.c...
 compiling stm32g0xx_hal_uart_ex.c...
-compiling stm32g0xx_hal_usart.c...
 compiling stm32g0xx_hal_dma.c...
-compiling sys.c...
+compiling stm32g0xx_hal_usart.c...
 compiling stm32g0xx_hal_uart.c...
 compiling delay.c...
+compiling sys.c...
 compiling led.c...
 compiling bt_dp.c...
 compiling usart.c...
 compiling bt.c...
-compiling iic.c...
 compiling bt_event.c...
-../Middlewares/Game/AW_Bullet.c(1): warning: In file included from...
-../Middlewares/Game/AW_Bullet.h(4): warning: In file included from...
-../Middlewares/Game/AircraftWar.h(13): warning: In file included from...
-../Middlewares/Game/AW_Player.h(22): error: unknown type name 'AW_Bullet_t'
-        AW_Bullet_t bullets[AW_PLAYER_BULLETS_NUM_MAX];         // <D7>ӵ<AF>
-        ^
-1 error generated.
-compiling AW_Bullet.c...
-compiling AircraftWar.c...
 compiling AW_Player.c...
+compiling AircraftWar.c...
+compiling iic.c...
+compiling AW_Bullet.c...
 compiling OLED.c...
-".\Objects\AW.axf" - 1 Error(s), 0 Warning(s).
+linking...
+Program Size: Code=22364 RO-data=2384 RW-data=72 ZI-data=3504  
+FromELF: creating hex file...
+".\Objects\AW.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -76,7 +72,6 @@ Package Vendor: Keil
   D:/Users/YEWAN/AppData/Local/Arm/Packs/Keil/STM32G0xx_DFP/1.4.0/Drivers/CMSIS/Device/ST/STM32G0xx/Include
 
 <h2>Collection of Component Files used:</h2>
-Target not created.
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
