--- a/MDK-ARM/Objects/AW.build_log.htm
+++ b/MDK-ARM/Objects/AW.build_log.htm
@@ -26,12 +26,36 @@ Project File Date:  02/01/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'Template'
+Rebuild target 'Template'
+assembling startup_stm32g030xx.s...
+compiling stm32g0xx_it.c...
+compiling system_stm32g0xx.c...
+compiling stm32g0xx_hal_msp.c...
+compiling stm32g0xx_hal.c...
+compiling stm32g0xx_hal_cortex.c...
+compiling stm32g0xx_hal_pwr.c...
+compiling stm32g0xx_hal_pwr_ex.c...
+compiling stm32g0xx_hal_gpio.c...
 compiling main.c...
-compiling AW_Bullet.c...
-compiling AW_Player.c...
-compiling AircraftWar.c...
+compiling stm32g0xx_hal_uart_ex.c...
+compiling stm32g0xx_hal_usart_ex.c...
+compiling stm32g0xx_hal_rcc_ex.c...
+compiling stm32g0xx_hal_uart.c...
+compiling stm32g0xx_hal_rcc.c...
+compiling stm32g0xx_hal_dma.c...
+compiling sys.c...
+compiling stm32g0xx_hal_usart.c...
+compiling delay.c...
+compiling usart.c...
+compiling led.c...
+compiling bt_dp.c...
+compiling bt.c...
 compiling bt_event.c...
+compiling iic.c...
+compiling AW_Bullet.c...
+compiling AircraftWar.c...
+compiling AW_Player.c...
+compiling OLED.c...
 linking...
 Program Size: Code=22364 RO-data=2384 RW-data=72 ZI-data=3504  
 FromELF: creating hex file...
