--- a/MDK-ARM/Objects/AW.htm
+++ b/MDK-ARM/Objects/AW.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\AW.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\AW.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sat Feb  4 00:06:09 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sat Feb  4 16:07:07 2023
 <BR><P>
 <H3>Maximum Stack Usage =        368 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -542,8 +542,9 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_printf_char_file
 </UL>
-<BR>[Called By]<UL><LI><a href="#[a9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Handle
-<LI><a href="#[ab]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Show_USART1
+<BR>[Called By]<UL><LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Bullet_Move_CB
+<LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Handle
+<LI><a href="#[a9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Printf
 <LI><a href="#[ae]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_Init
 <LI><a href="#[eb]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uart_init
 <LI><a href="#[2f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_Shoot
@@ -1009,16 +1010,18 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Player_Init
 </UL>
 
-<P><STRONG><a name="[97]"></a>AW_Bullet_Move_CB</STRONG> (Thumb, 148 bytes, Stack size 24 bytes, aw_bullet.o(.text.AW_Bullet_Move_CB))
-<BR><BR>[Stack]<UL><LI>Max Depth = 36<LI>Call Chain = AW_Bullet_Move_CB &rArr; AW_Bullet_Shot_Remove
+<P><STRONG><a name="[97]"></a>AW_Bullet_Move_CB</STRONG> (Thumb, 188 bytes, Stack size 32 bytes, aw_bullet.o(.text.AW_Bullet_Move_CB))
+<BR><BR>[Stack]<UL><LI>Max Depth = 168 + Unknown Stack Size
+<LI>Call Chain = AW_Bullet_Move_CB &rArr; printf &rArr; _printf_char_file &rArr; _printf_char_common &rArr; __printf
 </UL>
 <BR>[Calls]<UL><LI><a href="#[98]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_idiv
+<LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;printf
 <LI><a href="#[99]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Bullet_Shot_Remove
 </UL>
 <BR>[Called By]<UL><LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[9a]"></a>AW_Bullet_Shoot</STRONG> (Thumb, 100 bytes, Stack size 24 bytes, aw_bullet.o(.text.AW_Bullet_Shoot))
+<P><STRONG><a name="[9a]"></a>AW_Bullet_Shoot</STRONG> (Thumb, 96 bytes, Stack size 24 bytes, aw_bullet.o(.text.AW_Bullet_Shoot))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = AW_Bullet_Shoot &rArr; AW_Bullet_Shot_Add
 </UL>
 <BR>[Calls]<UL><LI><a href="#[9b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Bullet_Shot_Add
@@ -1026,7 +1029,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[2f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_Shoot
 </UL>
 
-<P><STRONG><a name="[9c]"></a>AW_Bullet_Update</STRONG> (Thumb, 104 bytes, Stack size 40 bytes, aw_bullet.o(.text.AW_Bullet_Update))
+<P><STRONG><a name="[9c]"></a>AW_Bullet_Update</STRONG> (Thumb, 108 bytes, Stack size 40 bytes, aw_bullet.o(.text.AW_Bullet_Update))
 <BR><BR>[Stack]<UL><LI>Max Depth = 136<LI>Call Chain = AW_Bullet_Update &rArr; OLED_ShowBMP &rArr; OLED_DrawPoint
 </UL>
 <BR>[Calls]<UL><LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;OLED_ShowBMP
@@ -1111,21 +1114,21 @@ Global Symbols
 <LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[a9]"></a>BT_DataPacket_Rx_Handle</STRONG> (Thumb, 192 bytes, Stack size 24 bytes, bt.o(.text.BT_DataPacket_Rx_Handle))
+<P><STRONG><a name="[a9]"></a>BT_DataPacket_Printf</STRONG> (Thumb, 120 bytes, Stack size 24 bytes, bt_dp.o(.text.BT_DataPacket_Printf))
 <BR><BR>[Stack]<UL><LI>Max Depth = 160 + Unknown Stack Size
-<LI>Call Chain = BT_DataPacket_Rx_Handle &rArr; printf &rArr; _printf_char_file &rArr; _printf_char_common &rArr; __printf
+<LI>Call Chain = BT_DataPacket_Printf &rArr; printf &rArr; _printf_char_file &rArr; _printf_char_common &rArr; __printf
 </UL>
 <BR>[Calls]<UL><LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;printf
-<LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Decode
 </UL>
 <BR>[Called By]<UL><LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[ab]"></a>BT_DataPacket_Show_USART1</STRONG> (Thumb, 120 bytes, Stack size 24 bytes, bt_dp.o(.text.BT_DataPacket_Show_USART1))
+<P><STRONG><a name="[aa]"></a>BT_DataPacket_Rx_Handle</STRONG> (Thumb, 192 bytes, Stack size 24 bytes, bt.o(.text.BT_DataPacket_Rx_Handle))
 <BR><BR>[Stack]<UL><LI>Max Depth = 160 + Unknown Stack Size
-<LI>Call Chain = BT_DataPacket_Show_USART1 &rArr; printf &rArr; _printf_char_file &rArr; _printf_char_common &rArr; __printf
+<LI>Call Chain = BT_DataPacket_Rx_Handle &rArr; printf &rArr; _printf_char_file &rArr; _printf_char_common &rArr; __printf
 </UL>
 <BR>[Calls]<UL><LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;printf
+<LI><a href="#[ab]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Decode
 </UL>
 <BR>[Called By]<UL><LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
@@ -1656,8 +1659,8 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Screen_Refresh
 <LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Bullet_Move_CB
-<LI><a href="#[a9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Handle
-<LI><a href="#[ab]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Show_USART1
+<LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Handle
+<LI><a href="#[a9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Printf
 <LI><a href="#[ec]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_Get_DataPacket_Rx
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Game_Init
 <LI><a href="#[ae]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_Init
@@ -1847,10 +1850,10 @@ Local Symbols
 <BR>[Called By]<UL><LI><a href="#[df]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Init
 </UL>
 
-<P><STRONG><a name="[aa]"></a>BT_DataPacket_Rx_Decode</STRONG> (Thumb, 120 bytes, Stack size 20 bytes, bt.o(.text.BT_DataPacket_Rx_Decode))
+<P><STRONG><a name="[ab]"></a>BT_DataPacket_Rx_Decode</STRONG> (Thumb, 120 bytes, Stack size 20 bytes, bt.o(.text.BT_DataPacket_Rx_Decode))
 <BR><BR>[Stack]<UL><LI>Max Depth = 20<LI>Call Chain = BT_DataPacket_Rx_Decode
 </UL>
-<BR>[Called By]<UL><LI><a href="#[a9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Handle
+<BR>[Called By]<UL><LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BT_DataPacket_Rx_Handle
 </UL>
 
 <P><STRONG><a name="[af]"></a>BT_USART_Init</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, bt.o(.text.BT_USART_Init))
@@ -1921,13 +1924,13 @@ Local Symbols
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Game_Init
 </UL>
 
-<P><STRONG><a name="[99]"></a>AW_Bullet_Shot_Remove</STRONG> (Thumb, 122 bytes, Stack size 12 bytes, aw_bullet.o(.text.AW_Bullet_Shot_Remove))
+<P><STRONG><a name="[99]"></a>AW_Bullet_Shot_Remove</STRONG> (Thumb, 128 bytes, Stack size 12 bytes, aw_bullet.o(.text.AW_Bullet_Shot_Remove))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = AW_Bullet_Shot_Remove
 </UL>
 <BR>[Called By]<UL><LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Bullet_Move_CB
 </UL>
 
-<P><STRONG><a name="[9b]"></a>AW_Bullet_Shot_Add</STRONG> (Thumb, 64 bytes, Stack size 8 bytes, aw_bullet.o(.text.AW_Bullet_Shot_Add))
+<P><STRONG><a name="[9b]"></a>AW_Bullet_Shot_Add</STRONG> (Thumb, 76 bytes, Stack size 8 bytes, aw_bullet.o(.text.AW_Bullet_Shot_Add))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = AW_Bullet_Shot_Add
 </UL>
 <BR>[Called By]<UL><LI><a href="#[9a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;AW_Bullet_Shoot
