--- a/MDK-ARM/Objects/AW.build_log.htm
+++ b/MDK-ARM/Objects/AW.build_log.htm
@@ -22,42 +22,46 @@ Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
 D:\code\EmbeddedProject\M0Plus-Proect\AircraftWar-OLED-BT-DataPacket\MDK-ARM\AircraftWar-OLED-BT-DataPacket.uvprojx
-Project File Date:  02/01/2023
+Project File Date:  02/04/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Template'
 assembling startup_stm32g030xx.s...
-compiling stm32g0xx_it.c...
-compiling system_stm32g0xx.c...
-compiling main.c...
-compiling stm32g0xx_hal.c...
 compiling stm32g0xx_hal_msp.c...
-compiling stm32g0xx_hal_cortex.c...
-compiling stm32g0xx_hal_usart_ex.c...
-compiling stm32g0xx_hal_pwr.c...
+compiling system_stm32g0xx.c...
+compiling stm32g0xx_hal.c...
+compiling main.c...
 compiling stm32g0xx_hal_pwr_ex.c...
-compiling stm32g0xx_hal_rcc.c...
+compiling stm32g0xx_hal_usart_ex.c...
+compiling stm32g0xx_it.c...
 compiling stm32g0xx_hal_rcc_ex.c...
-compiling stm32g0xx_hal_uart_ex.c...
+compiling stm32g0xx_hal_pwr.c...
+compiling stm32g0xx_hal_cortex.c...
 compiling stm32g0xx_hal_gpio.c...
-compiling sys.c...
-compiling stm32g0xx_hal_dma.c...
-compiling delay.c...
+compiling stm32g0xx_hal_uart_ex.c...
+compiling stm32g0xx_hal_rcc.c...
 compiling stm32g0xx_hal_usart.c...
-compiling usart.c...
 compiling stm32g0xx_hal_uart.c...
+compiling delay.c...
+compiling stm32g0xx_hal_dma_ex.c...
+compiling stm32g0xx_hal_dma.c...
+compiling sys.c...
+compiling tim.c...
+compiling usart.c...
 compiling led.c...
-compiling bt_dp.c...
+compiling stm32g0xx_hal_tim_ex.c...
 compiling bt.c...
-compiling bt_event.c...
+compiling bt_dp.c...
 compiling iic.c...
+compiling bt_event.c...
 compiling AircraftWar.c...
+compiling OLED.c...
+compiling stm32g0xx_hal_tim.c...
 compiling AW_Bullet.c...
 compiling AW_Player.c...
-compiling OLED.c...
 linking...
-Program Size: Code=23208 RO-data=2476 RW-data=80 ZI-data=3616  
+Program Size: Code=24924 RO-data=2476 RW-data=80 ZI-data=3696  
 FromELF: creating hex file...
 ".\Objects\AW.axf" - 0 Error(s), 0 Warning(s).
 
