--- a/MDK-ARM/Objects/AW.htm
+++ b/MDK-ARM/Objects/AW.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\AW.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\AW.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sat Feb  4 20:57:08 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sat Feb  4 22:58:23 2023
 <BR><P>
 <H3>Maximum Stack Usage =        368 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -1441,7 +1441,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[c7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_TIM_IRQHandler
 </UL>
 
-<P><STRONG><a name="[cb]"></a>HAL_TIM_PeriodElapsedCallback</STRONG> (Thumb, 120 bytes, Stack size 4 bytes, tim.o(.text.HAL_TIM_PeriodElapsedCallback))
+<P><STRONG><a name="[cb]"></a>HAL_TIM_PeriodElapsedCallback</STRONG> (Thumb, 136 bytes, Stack size 4 bytes, tim.o(.text.HAL_TIM_PeriodElapsedCallback))
 <BR><BR>[Stack]<UL><LI>Max Depth = 4<LI>Call Chain = HAL_TIM_PeriodElapsedCallback
 </UL>
 <BR>[Called By]<UL><LI><a href="#[c7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_TIM_IRQHandler
@@ -1580,10 +1580,10 @@ Global Symbols
 <P><STRONG><a name="[e4]"></a>IIC_WR_Byte_Cmd</STRONG> (Thumb, 54 bytes, Stack size 16 bytes, iic.o(.text.IIC_WR_Byte_Cmd))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = IIC_WR_Byte_Cmd &rArr; IIC_Wait_Ack
 </UL>
-<BR>[Calls]<UL><LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Send_Byte
-<LI><a href="#[e5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Start
-<LI><a href="#[e8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Stop
+<BR>[Calls]<UL><LI><a href="#[e8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Stop
 <LI><a href="#[e7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Wait_Ack
+<LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Send_Byte
+<LI><a href="#[e5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Start
 </UL>
 <BR>[Called By]<UL><LI><a href="#[ef]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;OLED_WR_Byte_Cmd
 </UL>
@@ -1591,10 +1591,10 @@ Global Symbols
 <P><STRONG><a name="[e9]"></a>IIC_WR_Byte_Dat_Fast</STRONG> (Thumb, 78 bytes, Stack size 16 bytes, iic.o(.text.IIC_WR_Byte_Dat_Fast))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = IIC_WR_Byte_Dat_Fast &rArr; IIC_Wait_Ack
 </UL>
-<BR>[Calls]<UL><LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Send_Byte
-<LI><a href="#[e5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Start
-<LI><a href="#[e8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Stop
+<BR>[Calls]<UL><LI><a href="#[e8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Stop
 <LI><a href="#[e7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Wait_Ack
+<LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Send_Byte
+<LI><a href="#[e5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Start
 </UL>
 <BR>[Called By]<UL><LI><a href="#[f0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;OLED_WR_Byte_Dat_Fast
 </UL>
@@ -1777,7 +1777,7 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> _printf_char_file.o(.text)
 </UL>
-<P><STRONG><a name="[63]"></a>main</STRONG> (Thumb, 132 bytes, Stack size 16 bytes, main.o(.text.main))
+<P><STRONG><a name="[63]"></a>main</STRONG> (Thumb, 148 bytes, Stack size 16 bytes, main.o(.text.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 232 + Unknown Stack Size
 <LI>Call Chain = main &rArr; sys_stm32_clock_init &rArr; HAL_RCC_OscConfig &rArr; HAL_InitTick &rArr; HAL_SYSTICK_Config &rArr; SysTick_Config &rArr; __NVIC_SetPriority
 </UL>
@@ -2013,9 +2013,9 @@ Local Symbols
 </UL>
 
 <P><STRONG><a name="[e8]"></a>IIC_Stop</STRONG> (Thumb, 68 bytes, Stack size 0 bytes, iic.o(.text.IIC_Stop))
-<BR><BR>[Called By]<UL><LI><a href="#[e9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_WR_Byte_Dat_Fast
+<BR><BR>[Called By]<UL><LI><a href="#[e7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Wait_Ack
+<LI><a href="#[e9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_WR_Byte_Dat_Fast
 <LI><a href="#[e4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_WR_Byte_Cmd
-<LI><a href="#[e7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IIC_Wait_Ack
 </UL>
 
 <P><STRONG><a name="[ef]"></a>OLED_WR_Byte_Cmd</STRONG> (Thumb, 20 bytes, Stack size 16 bytes, oled.o(.text.OLED_WR_Byte_Cmd))
